Update Contact Us link to Google Forms

--- a/index.html
+++ b/index.html
@@ -73,6 +73,6 @@
       <li><a href="https://www.alltrails.com/">AllTrails</a></li>
     </ul>
     <hr>
-    <a href=".\contact-me.html">Contact Us</a>
+    <a href="https://forms.gle/ErqZysKrBFxnL5SV7">Contact Us</a>
   </body>
 </html>
