--- a/Hollywood_Sign/index.html
+++ b/Hollywood_Sign/index.html
@@ -14,7 +14,7 @@
         <img src="./pics/Hollywood_Sign.png" alt="Hollywood Sign picture" style="width:200px">
         </td>
         <td>
-          <h1><a href="https://www.hollywoodsign.org/">Hollywood Sign</a> Trials</h1>
+          <h1><a href="https://www.hollywoodsign.org/">Hollywood Sign</a> <a href="https://kcfamilyjourney.github.io/hollywood/">Trials</a></h1>
           <p></p>
         </td>
       </tr>
