--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           </td>
           <td class="content">
             <img class="place" src="./Hollywood_Sign/pics/Hollywood_Sign.png" alt="Hollywood_Sign">
-            <p><a href="./Hollywood_Sign/index.html">Hollywood Sign</a></p>
+            <p><a href="https://kcfamilyjourney.github.io/hollywood/">Hollywood Sign</a></p>
           </td>
           <td class="content">
             <img class="place" src="./Peter F Schabarum Regional County Park/pics/Peter F Schabarum Regional County Park1.png" alt="Peter F Schabarum Regional County Park">
