--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <p><a href=".\Griffith Observatory\index.html">Griffith Observatory</a></p>
           </td>
           <td class="content">
-            <img class="place" src="./Hollywood_Sign/pics/Hollywood_Sign.png" alt="Hollywood_Sign">
+            <img class="place" src="./images/Hollywood_Sign.png" alt="Hollywood_Sign">
             <p><a href="https://kcfamilyjourney.github.io/hollywood/">Hollywood Sign</a></p>
           </td>
           <td class="content">
