update the trails for Griffith Observatory

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <tr>
           <td class="content">
             <img class="place" src="./Griffith Observatory/pics/Griffith Observatory.png" alt="Griffith Observatory">
-            <p><a href=".\Griffith Observatory\index.html">Griffith Observatory</a></p>
+            <p><a href="https://kcfamilyjourney.github.io/Griffith-Observatory/">Griffith Observatory</a></p>
           </td>
           <td class="content">
             <img class="place" src="./Hollywood_Sign/pics/Hollywood_Sign.png" alt="Hollywood_Sign">
