remove Griffith Obervatory folder

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <tbody>
         <tr>
           <td class="content">
-            <img class="place" src="./Griffith Observatory/pics/Griffith Observatory.png" alt="Griffith Observatory">
+            <img class="place" src="./images/Griffith Observatory.png" alt="Griffith Observatory">
             <p><a href="https://kcfamilyjourney.github.io/Griffith-Observatory/">Griffith Observatory</a></p>
           </td>
           <td class="content">
