change link for Puente Hill Park

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <p><a href="https://kcfamilyjourney.github.io/hollywood/">Hollywood Sign</a></p>
           </td>
           <td class="content">
-            <img class="place" src="./Peter F Schabarum Regional County Park/pics/Peter F Schabarum Regional County Park1.png" alt="Peter F Schabarum Regional County Park">
-            <p><a href="./Peter F Schabarum Regional County Park/index.html">Peter F Schabarum Regional County Park</a></p>
+            <img class="place" src="./images/Peter F Schabarum Regional County Park1.png" alt="Peter F Schabarum Regional County Park">
+            <p><a href="https://kcfamilyjourney.github.io/Puente-Hills-Preserve/">Puente Hills Preserve</a></p>
           </td>
         </tr>
       </tbody>
