add Mt Baldy trails

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
             <img class="place" src="./images/Peter F Schabarum Regional County Park1.png" alt="Peter F Schabarum Regional County Park">
             <p><a href="https://kcfamilyjourney.github.io/Puente-Hills-Preserve/">Puente Hills Preserve</a></p>
           </td>
+          <td class="content">
+            <img class="place" src="https://www.fs.usda.gov/sites/nfs/files/styles/thumbnail/public/r05/angeles/image/mt_baldy_visitor_center.jpg?h=a1e1a043" alt="Mount Baldy Visitor Center">
+            <p><a href="https://kcfamilyjourney.github.io/Mt-Baldy/">Mt. Baldy</a></p>
+          </td>
         </tr>
       </tbody>
     </table>
