--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p><a href="https://kcfamilyjourney.github.io/Puente-Hills-Preserve/">Puente Hills Preserve</a></p>
           </td>
           <td class="content">
-            <img class="place" src="https://www.fs.usda.gov/sites/nfs/files/styles/thumbnail/public/r05/angeles/image/mt_baldy_visitor_center.jpg?h=a1e1a043" alt="Mount Baldy Visitor Center">
+            <img class="place" src="https://a39315b649b84969a702.cdn6.editmysite.com/uploads/b/a39315b649b84969a70240aaaf71ab4b965beb5d38fd89244ec601a86edd35a7/2023-05-29_08-03-40_1685372637.jpg?width=1200&dpr=2" alt="Mount Baldy resort">
             <p><a href="https://kcfamilyjourney.github.io/Mt-Baldy/">Mt. Baldy</a></p>
           </td>
         </tr>
