--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <p><a href="https://kcfamilyjourney.github.io/Puente-Hills-Preserve/">Puente Hills Preserve</a></p>
           </td>
           <td class="content">
-            <img class="place" src="./images/mt baldy resort.jpg" alt="Mount Baldy resort">
+            <img class="place" src="./images/mt baldy resort.png" alt="Mount Baldy resort">
             <p><a href="https://kcfamilyjourney.github.io/Mt-Baldy/">Mt. Baldy</a></p>
           </td>
         </tr>
