add 'HikingGuy' to reference

--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
     <hr>
     <h3>References</h3>
     <ul>
-      <li><a href="https://www.alltrails.com/">AllTrails</a></li>
+      <li><a href="https://www.alltrails.com/">AllTrails</a> -- Community, map to downlaod, etc</li>
+      <li><a href="https://hikingguy.com/">HikingGuy</a> -- Hiking advices</li>
     </ul>
     <hr>
     <a href="https://forms.gle/ErqZysKrBFxnL5SV7">Contact Us</a>
